# RecipeR

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/reciper/: __init__.py  __main__.py  cli.py  config.py  errors.py  extract.py  fetch.py  models.py  normalize.py  pipeline.py  render.py
tests/: test_cli.py  test_config.py  test_extract.py  test_fetch.py  test_normalize.py  test_pipeline.py  test_render.py  test_run.py
tests/fixtures/: recipe_page.html
